--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write ."
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
