--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write ."
   },
   "dependencies": {
+    "@react-three/fiber": "9.0.0-alpha.8",
     "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,7 +26,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-tilt": "^1.0.2",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
