Add blog site, fix incorrect image issue

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/fiber": "9.0.0-alpha.8",
     "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
